--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 
 # dependencies
 node_modules/
-client/node_modules/
-server/node_modules/
-
 /.pnp
 .pnp.js
 
@@ -20,7 +17,7 @@ server/node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.kenv
+kenv/
 
 npm-debug.log*
 yarn-debug.log*
