--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "clsx": "^2.1.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.16.0",
